# discover-then-distill

./: .gitignore  CITATION.cff  Makefile  README.md  pyproject.toml  requirements.lock.txt
configs/: model_mhc_120m.json  model_mhc_350m.json  model_mhc_900m.json
configs/tmp/: model_tiny.json
data/discovery/: heldout.jsonl  train.jsonl
data/packed/: train.bin.json  train_tiny.bin.json  val.bin.json  val_tiny.bin.json
data/raw/: val.txt
data/sdft/: demo.jsonl  from_ttt.jsonl  from_ttt_train_fast_v1.jsonl
data/tokenizer/: spm32k.model  spm32k.vocab  spm_tiny.model  spm_tiny.vocab
docs/: AUDIT_REPORT.md  CODEX_HANDOFF.md
paper/: 01_scope_and_claims.md  02_experimental_plan.md  03_related_work_matrix.md  04_results_registry.md  05_writing_outline.md  06_submission_checklist.md  README.md  RESEARCH_DIRECTION.md  RUNBOOK_DISCOVER_DISTILL.md  plot_pipeline_diagram.py  plot_results.py  plot_run_timeline.py  run_discovery_suite.py
paper/latex/: .gitignore  Makefile  README.md  build_release.ps1  latexmkrc  macros.tex  main.tex  references.bib  references_manual.tex
scripts/: _bootstrap.py  eval.py  lora_apply.py  lora_export.py  prepare_data.py  pretrain.py  sdft.py  train_tokenizer.py  ttt_discover.py  ttt_to_sdft_jsonl.py
tests/: conftest.py  test_generate_padding.py  test_lora_roundtrip.py  test_model_shapes.py  test_sdft_dataloader.py  test_sdft_gate_logic.py  test_sdft_replay_sampling.py  test_sinkhorn.py  test_ttt_beta_solver.py  test_ttt_puct_select.py  test_ttt_to_sdft_jsonl.py  test_ttt_to_sdft_pipeline.py  test_ttt_toy_env.py
(+36 files in other folders)
